# ot-harjoitustyo

./: .env  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: Testaus.md  arkkitehtuuri.md  changelog.md  kayttoohje.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopeli.md
src/: config.py  database_connection.py  index.py  initialize_database.py
src/entities/: expenses.py  user.py
src/repositories/: base_repository.py  expense_repository.py  user_repository.py
src/services/: expense_service.py  user_service.py
src/tests/: test_expense.py  test_user.py
src/tests/test_repositories/: test_expense_repository.py  test_user_repository.py
src/tests/test_services/: test_expense_service.py  test_user_service.py
src/ui/: add_expenses_view.py  chart_view.py  expenses_view.py  login_view.py  register_view.py  style.py
