[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["yuchen <songyuchen2003@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
pytest = "^8.3.5"
python-dotenv = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.0"
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
